# STAGED

./: .gitignore  Makefile  README.md  environment.yml  main.py  pyproject.toml  trained_model.pth
config/: base_config.yaml  config.py
configs/: config.yaml  train.yaml
configs/data/: default.yaml  spatial_temporal.yaml  staged.yaml
configs/logger/: default.yaml
configs/model/: STAGED.yaml  default.yaml
configs/paths/: default.yaml
configs/reports/: default.yaml
configs/trainer/: default.yaml
configs/training/: default.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.0-KX-toy-sim.ipynb  0.01-jcr-MIOFlow-Exporation.ipynb  0.02-jcr-RiTINI-Exploration.ipynb  0.03-jcr-Pair-Dataset.ipynb  2.01-KX-constructor-model.ipynb  2.01-jcr-constructor-model.ipynb  2.02-jcr-results-exploration.ipynb  2.03-KX-gene_expression_preds.ipynb  2.03-jcr-gene_expression_preds.ipynb  3.01-jcr-STAGED-main.ipynb  xs-ad-grant_all.ipynb
notebooks/exploration/: 2.01-KX-constructor-model.ipynb  2.01-jcr-constructor-model.ipynb  2.02-jcr-results-exploration.ipynb  2.03-jcr-gene_expression_preds.ipynb  2.03-jcr-real-dataconstructor-model.ipynb  (+9 more)
proof_of_concept/: README.md  inference.py  main.py  requirements.txt  trainer.py
results/: config.pkl  model.pt  results.pkl
scripts/: train_axalotl.sh
simdata/: README.md  rotation.py
src/: features.py  inference.py  main.py  predict.py  train.py  train_template.py
src/data/: cell.py  (+3 more)
staged/: dataset.py  plots.py  train.py
tests/: ascii_art.txt  test_data_utils.py  test_model.py  test_training_next_step.py  test_training_ode.py
(+93 files in other folders)
