[project]
name = "staged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "tqdm",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "lightning>=2.0,<3.0",
    "torch-geometric",
    "torchdiffeq",
    "anndata"]
