[project]
name = "staged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "tqdm",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "lightning>=2.0,<3.0",
    "torch-geometric",
    "torchdiffeq",
    "anndata",
    "jupytext>=1.19.3",
]
